2005-06-07  Tim Waugh  <twaugh@redhat.com>

	* printer/Epson-Stylus_Photo_870.xml: Added IEEE 1284 information (RH
	  bug #159717).

2005-06-07  Tim Waugh  <twaugh@redhat.com>

	* db/source/printer/Epson-Stylus_Photo_870.xml: 

2005-06-03  Bram Voss <bvos@oce.nl>

Added the following printers for Oce : 
=======================================
printer/8445PS.xml
printer/8465PS.xml
printer/PPC3073PS.xml
printer/PPC3074PS.xml
printer/PPC3093PS.xml
printer/PPC3094PS.xml
printer/PPC3113PS.xml
printer/PPC3114PS.xml
printer/PPC5115PS.xml
printer/PPC5160PS.xml
printer/VarioPrint2045PS.xml
printer/VarioPrint2050PS.xml
printer/VarioPrint2055PS.xml
printer/VarioPrint2060PS.xml
printer/VarioPrint2065PS.xml
printer/VarioPrint2070PS.xml
printer/VarioPrint2090PS.xml
printer/VarioPrint2100PS.xml
printer/VarioPrint2105PS.xml
printer/VarioPrint2110PS.xml
printer/VarioPrint3145PS.xml
printer/VarioPrint3155PS.xml
printer/VarioPrint3165PS.xml
=======================================

2005-05-28  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/Epson-Stylus_Photo_R800.xml,
	  printer/Epson-Stylus_Photo_R1800.xml: Added Epson Stylus Photo
	  R1800, updated text and rating for the R800 and R1800.

2005-05-26  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/Brother-4550.xml, printer/Brother-DCP-1200.xml,
	  printer/Brother-HL-1020.xml, printer/Brother-HL-1030.xml,
	  printer/Brother-HL-1040.xml, printer/Brother-HL-1050.xml,
	  printer/Brother-HL-1060.xml, printer/Brother-HL-1070.xml,
	  printer/Brother-HL-10h.xml, printer/Brother-HL-10V.xml,
	  printer/Brother-HL-1250.xml, printer/Brother-HL-1260.xml,
	  printer/Brother-HL-1270N.xml, printer/Brother-HL-1435.xml,
	  printer/Brother-HL-1440.xml, printer/Brother-HL-1450.xml,
	  printer/Brother-HL-1660e.xml, printer/Brother-HL-2060.xml,
	  printer/Brother-HL-2400CeN.xml, printer/Brother-HL-2600CN.xml,
	  printer/Brother-HL-3400CN.xml, printer/Brother-HL-3450CN.xml,
	  printer/Brother-HL-4000CN.xml, printer/Brother-HL-4Ve.xml,