@@ -21,7 +21,13 @@
     </text>
   </lang>
   <autodetect>
-  <!--no known parport probe information--></autodetect>
+    <usb>
+      <manufacturer>EPSON</manufacturer>
+      <model>Stylus Photo 915</model>
+      <description>EPSON Stylus Photo 915</description>
+      <commandset>ESCPL2,BDC,D4</commandset>
+    </usb>
+  </autodetect>
   <functionality>A</functionality>
   <driver>gimp-print</driver>
   <!--no "contrib_url"-->
