@@ -1,3 +1,8 @@
+2005-06-10  Tim Waugh  <twaugh@redhat.com>
+
+	* printer/Epson-Stylus_Photo_915.xml: Added IEEE 1284 information (RH
+	  bug #160030).
+
 2005-06-07  Tim Waugh  <twaugh@redhat.com>
 
 	* printer/Epson-Stylus_Photo_870.xml: Added IEEE 1284 information (RH
